tests/negative/array_param.ax
module array_param;

fn bad(xs: [4]u8) -> i32 {
    return 0;
}

fn main() -> i32 {
    return 0;
}
